--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,5 @@
 {
   "rewrites": [
-    {
-      "source": "/posts/(.*)",
-      "destination": "/posts/$1"
-    },
-    {
-      "source": "/(.*)",
-      "destination": "/"
-    }
+    { "source": "/(.*)", "destination": "/" }
   ]
 }
